#ifndef MUDUO_PROTORPC_ZURG_SLAVEAPP_H
#define MUDUO_PROTORPC_ZURG_SLAVEAPP_H


#include <boost/noncopyable.hpp>
#include <boost/scoped_ptr.hpp>

namespace muduo
{
namespace net
{
class RpcServer;
}
}

namespace zurg
{

class RpcClient;
class SlaveConfig;
class SlaveServiceImpl;



}
#endif  // MUDUO_PROTORPC_ZURG_SLAVEAPP_H
